# bibtex-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: _scratch.rs  bib.bib  bibtex.rs  bin.rs  entry.rs  field.rs  item.rs  lib.rs  main.rs  parser.rs  parsers.rs  tag.rs  test.rs
test/: input_book.bib  single_sorted.bib  single_unsorted.bib
